# xbmpwall

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  configure.ac  main.c
desktop/: xbmpwall.xbm
src/: hexcolors.h  xbmpwall.c  xbmpwall.h
